== Version 2.7 Work in progress (not released -- this is a draft) ==

  UPGRADE NOTES :
    - If you upgrade your MariaDB server to 10.7+, you have to convert all the UUID fields
      (which were just CharFields before MariaDB 10.7) to real UUID fields.

  Users side :
  ------------
    # The minimal version of Python is now '3.10'.
    # The version of Django has been upgraded to '5.2' ; for users it means that :
        - Python '3.13' is officially supported.
        - The minimal version of SQLite is now '3.31'.
        - The minimal version of MySQL is now '8.0.11'.
        - The minimal version of PostgreSQL is now '14'.
        - The minimal version of MariaDB is now '10.5' ;
          the UUID fields may have to be manually converted if you use MariaDB (see the upgrade notes above).
        - The URL fields assume "https" by default ; set the setting 'FORMS_URLFIELD_ASSUME_HTTPS' if you prefer "http"
          (this setting will be removed with Django 6.0 -- & so Creme 2.9 or something like that).
    # A warning is now displayed if the settings 'SITE_DOMAIN' is not correctly defined.
    # A new mandatory app has been added: "Custom entities".
      It allows users to create their own types of entity without coding.
        - You can create up to 20 types.
        - The new types have just one regular field ("name"), you can add custom-field as usual.
        - BEWARE: if you upgrade from a previous version of Creme, 'creme.custom_entities' must be
          in your 'settings.INSTALLED_APPS' (it should be OK it you did not modify it or have modified as advised).
    # A Workflow engine has been added; it allows to configure from the UI some automatic actions.
        - Current events which can trigger a Workflow :
          entity creation, entity edition, relationship adding, property adding.
        - Current available actions :
            - Add a property
            - Add a relationship
            - Send an email (needs the app 'emails').