@@ -1,0 +1,33 @@
+ALTER TABLE creme_core_cremeentity MODIFY COLUMN uuid UUID;
+ALTER TABLE creme_core_sandbox MODIFY COLUMN uuid UUID;
+ALTER TABLE creme_core_customfield MODIFY COLUMN uuid UUID;
+ALTER TABLE activities_status MODIFY COLUMN uuid UUID;
+ALTER TABLE assistants_usermessagepriority MODIFY COLUMN uuid UUID;
+ALTER TABLE billing_additionalinformation MODIFY COLUMN uuid UUID;
+ALTER TABLE billing_creditnotestatus MODIFY COLUMN uuid UUID;
+ALTER TABLE billing_invoicestatus MODIFY COLUMN uuid UUID;
+ALTER TABLE billing_paymentterms MODIFY COLUMN uuid UUID;
+ALTER TABLE billing_quotestatus MODIFY COLUMN uuid UUID;
+ALTER TABLE billing_salesorderstatus MODIFY COLUMN uuid UUID;
+ALTER TABLE billing_settlementterms MODIFY COLUMN uuid UUID;
+ALTER TABLE commercial_acttype MODIFY COLUMN uuid UUID;
+ALTER TABLE creme_core_currency MODIFY COLUMN uuid UUID;
+ALTER TABLE creme_core_language MODIFY COLUMN uuid UUID;
+ALTER TABLE creme_core_vat MODIFY COLUMN uuid UUID;
+ALTER TABLE documents_documentcategory MODIFY COLUMN uuid UUID;
+ALTER TABLE documents_foldercategory MODIFY COLUMN uuid UUID;
+ALTER TABLE events_eventtype MODIFY COLUMN uuid UUID;
+ALTER TABLE opportunities_origin MODIFY COLUMN uuid UUID;
+ALTER TABLE opportunities_salesphase MODIFY COLUMN uuid UUID;
+ALTER TABLE persons_civility MODIFY COLUMN uuid UUID;
+ALTER TABLE persons_legalform MODIFY COLUMN uuid UUID;
+ALTER TABLE persons_position MODIFY COLUMN uuid UUID;
+ALTER TABLE persons_sector MODIFY COLUMN uuid UUID;
+ALTER TABLE persons_staffsize MODIFY COLUMN uuid UUID;
+ALTER TABLE products_category MODIFY COLUMN uuid UUID;
+ALTER TABLE products_subcategory MODIFY COLUMN uuid UUID;
+ALTER TABLE projects_projectstatus MODIFY COLUMN uuid UUID;
+ALTER TABLE projects_taskstatus MODIFY COLUMN uuid UUID;
+ALTER TABLE tickets_criticity MODIFY COLUMN uuid UUID;
+ALTER TABLE tickets_priority MODIFY COLUMN uuid UUID;
+ALTER TABLE tickets_status MODIFY COLUMN uuid UUID;
